--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>This is my website.</h1>
+    <h1 class="blue">This is my blue tag.</h1>
     <div>It's simple, but it works!</div>
   </body>
 </html>
